fixed navigation off center to left aligned

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -213,7 +213,6 @@ img.celtic-head {
   font-family: "Eagle Lake";
   height: 90px;
   line-height: 20px;
-  padding: 35px 0px 30px 0px;
   position: absolute;
   width: 100%;
   left: 0;
